<?xml version="1.0" encoding="UTF-8"?>
<!--
  Copyright © 2024-2025 Petr Panteleyev <petr@panteleyev.org>
  SPDX-License-Identifier: BSD-2-Clause
  -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.panteleyev</groupId>
    <artifactId>sapper</artifactId>
    <version>25.5.1</version>
    <packaging>jar</packaging>
    <name>Sapper Game</name>

    <profiles>
        <profile>
            <id>win</id>
            <activation>
                <os>
                    <family>windows</family>
                </os>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.panteleyev</groupId>
                        <artifactId>jpackage-maven-plugin</artifactId>
                        <version>${jpackageMavenPluginVersion}</version>

                        <configuration>
                            <icon>icons/icon.ico</icon>
                            <winMenu>true</winMenu>
                            <winDirChooser>true</winDirChooser>
                            <winUpgradeUuid>8d5d715d-5dcc-4b90-a415-425bba6aadb3</winUpgradeUuid>
                            <winMenuGroup>panteleyev.org</winMenuGroup>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>mac</id>
            <activation>
                <os>
                    <family>mac</family>
                </os>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.panteleyev</groupId>
                        <artifactId>jpackage-maven-plugin</artifactId>
                        <version>${jpackageMavenPluginVersion}</version>

                        <configuration>
                            <icon>icons/icon.icns</icon>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>linux</id>
            <activation>
                <os>
                    <name>linux</name>
                </os>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.panteleyev</groupId>
                        <artifactId>jpackage-maven-plugin</artifactId>
                        <version>${jpackageMavenPluginVersion}</version>

                        <configuration>
                            <type>APP_IMAGE</type>
                            <icon>icons/icon.png</icon>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>24</maven.compiler.release>
        <maven.build.timestamp.format>yyyy-MM-dd'T'HH:mm:ss'Z'</maven.build.timestamp.format>
        <appModule>sapper</appModule>
        <appMainClass>org.panteleyev.sapper.SapperApplication</appMainClass>
        <timestamp>${maven.build.timestamp}</timestamp>
        <!-- Plugins -->
        <mavenCleanPluginVersion>3.4.1</mavenCleanPluginVersion>
        <mavenResourcePluginVersion>3.3.1</mavenResourcePluginVersion>
        <mavenCompilerPluginVersion>3.14.0</mavenCompilerPluginVersion>
        <mavenJarPluginVersion>3.4.2</mavenJarPluginVersion>
        <mavenSurefirePluginVersion>3.5.2</mavenSurefirePluginVersion>
        <mavenDependencyPluginVersion>3.8.1</mavenDependencyPluginVersion>
        <mavenExecPluginVersion>3.5.0</mavenExecPluginVersion>
        <jlinkMavenPluginVersion>1.1.1</jlinkMavenPluginVersion>
        <jpackageMavenPluginVersion>1.6.6</jpackageMavenPluginVersion>
        <!-- Dependencies -->
        <javaFxVersion>24.0.1</javaFxVersion>
        <javaCommonsVersion>1.6.0</javaCommonsVersion>
        <javaFxHelpersVersion>1.20.0</javaFxHelpersVersion>
        <javaFreeDesktopVersion>0.5.1</javaFreeDesktopVersion>
        <jUnitVersion>5.12.1</jUnitVersion>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-base</artifactId>
            <version>${javaFxVersion}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>${javaFxVersion}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javaFxVersion}</version>
        </dependency>
        <dependency>
            <groupId>org.panteleyev</groupId>
            <artifactId>java-fx-helpers</artifactId>
            <version>${javaFxHelpersVersion}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.openjfx</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.panteleyev</groupId>
            <artifactId>commons</artifactId>
            <version>${javaCommonsVersion}</version>
        </dependency>
        <dependency>
            <groupId>org.panteleyev</groupId>
            <artifactId>freedesktop</artifactId>
            <version>${javaFreeDesktopVersion}</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${jUnitVersion}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <resources>
            <resource>
                <directory>${project.basedir}/src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>${mavenResourcePluginVersion}</version>
                <configuration>
                    <propertiesEncoding>${project.build.sourceEncoding}</propertiesEncoding>
                    <nonFilteredFileExtensions>
                        <nonFilteredFileExtension>ttf</nonFilteredFileExtension>
                        <nonFilteredFileExtension>png</nonFilteredFileExtension>
                    </nonFilteredFileExtensions>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${mavenCompilerPluginVersion}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>${mavenJarPluginVersion}</version>
                <configuration>
                    <outputDirectory>${project.build.directory}/jmods</outputDirectory>
                    <archive>
                        <manifestEntries>
                            <Main-Class>${appMainClass}</Main-Class>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${mavenSurefirePluginVersion}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>${mavenDependencyPluginVersion}</version>
                <executions>
                    <execution>
                        <id>copy-dependencies</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <includeScope>runtime</includeScope>
                            <outputDirectory>${project.build.directory}/jmods</outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <!--
                Remove empty JavaFX jars to enable jlink
            -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-clean-plugin</artifactId>
                <version>${mavenCleanPluginVersion}</version>
                <executions>
                    <execution>
                        <id>jfx</id>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                        <configuration>
                            <excludeDefaultDirectories>true</excludeDefaultDirectories>
                            <filesets>
                                <fileset>
                                    <directory>${project.build.directory}/jmods</directory>
                                    <includes>
                                        <include>javafx-*</include>
                                    </includes>
                                </fileset>
                            </filesets>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.panteleyev</groupId>
                <artifactId>jlink-maven-plugin</artifactId>
                <version>${jlinkMavenPluginVersion}</version>
                <configuration>
                    <output>${project.build.directory}/jlink</output>
                    <modulePaths>
                        <modulePath>${project.build.directory}/jmods</modulePath>
                        <!--suppress UnresolvedMavenProperty -->
                        <modulePath>${JAVAFX_JMODS}</modulePath>
                    </modulePaths>
                    <addModules>
                        <addModule>${appModule}</addModule>
                    </addModules>
                    <noHeaderFiles>true</noHeaderFiles>
                    <noManPages>true</noManPages>
                    <stripDebug>true</stripDebug>
                    <generateCdsArchive>true</generateCdsArchive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.panteleyev</groupId>
                <artifactId>jpackage-maven-plugin</artifactId>
                <version>${jpackageMavenPluginVersion}</version>
                <configuration>
                    <name>Sapper</name>
                    <appVersion>${project.version}</appVersion>
                    <vendor>panteleyev.org</vendor>
                    <module>${appModule}/${appMainClass}</module>
                    <runtimeImage>target/jlink</runtimeImage>
                    <destination>target/dist</destination>
                    <removeDestination>true</removeDestination>
                    <javaOptions>
                        <javaOption>-XX:NewRatio=1</javaOption>
                        <javaOption>-Xms100m</javaOption>
                        <javaOption>-Xmx100m</javaOption>
                        <javaOption>--enable-native-access=javafx.graphics</javaOption>
                        <javaOption>--sun-misc-unsafe-memory-access=allow</javaOption>
                    </javaOptions>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>${mavenExecPluginVersion}</version>
                <configuration>
                    <executable>java</executable>
                </configuration>
                <executions>
                    <execution>
                        <id>run</id>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <arguments>
                                <argument>-XX:NewRatio=1</argument>
                                <argument>-Xms100m</argument>
                                <argument>-Xmx100m</argument>
                                <argument>--enable-native-access=javafx.graphics</argument>
                                <argument>--sun-misc-unsafe-memory-access=allow</argument>
                                <argument>--module-path</argument>
                                <modulepath/>
                                <argument>--module</argument>
                                <argument>${appModule}/${appMainClass}</argument>
                            </arguments>
                        </configuration>
                    </execution>
                    <execution>
                        <id>debug</id>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <arguments>
                                <argument>-XX:NewRatio=1</argument>
                                <argument>-Xms100m</argument>
                                <argument>-Xmx100m</argument>
                                <argument>--enable-native-access=javafx.graphics</argument>
                                <argument>--sun-misc-unsafe-memory-access=allow</argument>
                                <!--suppress UnresolvedMavenProperty -->
                                <argument>-agentlib:jdwp=transport=dt_socket,server=n,address=${jpda.address}</argument>
                                <argument>--module-path</argument>
                                <modulepath/>
                                <argument>--module</argument>
                                <argument>${appModule}/${appMainClass}</argument>
                            </arguments>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
